# kachenjunga

./: Cargo.toml  README.md  build.rs  clippy.toml
benches/: s_entropy_navigation.rs
docs/: buhera-vpos.tex  implementation.md  self-aware-bayesian-belief-networks.tex  virtual-machine.tex
examples/: complete_system_demo.rs  consciousness_detection.rs  s_entropy_navigation.rs
scripts/: build.ps1
src/: lib.rs
src/algorithms/: harare_s_entropy.rs  kinshasa_bmd.rs  mod.rs  mufakose_consciousness.rs  stella_constants.rs
src/infrastructure/: mod.rs
src/integration/: mod.rs
src/interfaces/: mod.rs
src/orchestration/: mod.rs
src/utils/: mod.rs
tests/: README.md
tests/algorithm_tests/: consciousness_detection_test.rs  s_entropy_navigation_test.rs
tests/integration_tests/: core_algorithms_test.rs
tests/performance_tests/: benchmarks_test.rs
