[package]
name = "kachenjunga"
version = "0.1.0"
edition = "2021"
description = "Advanced algorithms for biological quantum computation and neural systems"
authors = ["kundai"]
license = "MIT"

[workspace]
members = [
    "crates/intracellular",
    "crates/quantum-bio", 
    "crates/neural-algorithms",
    "crates/atp-dynamics",
    "crates/maxwell-demons",
    "crates/membrane-quantum",
    "crates/oscillatory-systems",
    "crates/consciousness-emergence",
]

[dependencies]
# Core numerical computing
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"

# Scientific computing
rayon = "1.8"
approx = "0.5"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for hardware integration)
tokio = { version = "1.0", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "atp_dynamics"
harness = false

[[bench]]
name = "maxwell_demons"
harness = false

[[bench]]
name = "quantum_coherence"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

[features]
default = ["std"]
std = []
hardware-integration = ["tokio"]
visualization = []
full = ["hardware-integration", "visualization"]
